# Python_Modulo1

./: README.md  pyproject.toml
bloque1_fundamentos/: ejercicio1_imc.py  ejercicio2_mayoria_edad.py  ejercicio3_vocales_consonantes.py  ejercicio4_tabla_multiplicar.py  ejercicio5_adivina_numero.py
bloque2_estructuras_funciones/: ejercicio10_frecuencia_palabras.py  ejercicio11_listas_comparacion.py  ejercicio12_conversor_unidades.py  ejercicio6_calificaciones.py  ejercicio7_lista_compras.py  ejercicio8_palindromos.py  ejercicio9_agenda_contactos.py
bloque3_proyectos/: ejercicio13_inventario.py  ejercicio14_cajero.py  ejercicio15_reporte_estudiantes.py
